--- a/snack-lirio/backend/package.json
+++ b/snack-lirio/backend/package.json
@@ -2,6 +2,7 @@
   "name": "snack-lirio-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "build": "tsc"
@@ -10,6 +11,7 @@
     "@prisma/client": "^5.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
