--- a/snack-lirio/backend/package.json
+++ b/snack-lirio/backend/package.json
@@ -21,6 +21,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^2.0.0",
+    "multer": "^2.0.2",
     "prisma": "^5.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
