--- a/snack-lirio/package.json
+++ b/snack-lirio/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
