banco de dados funcionando no alwaysdata

--- a/snack-lirio/backend/.env.example
+++ b/snack-lirio/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@host:5432/database"
+DATABASE_URL="mysql://user:password@host:5432/database"
 JWT_SECRET="sua-chave-secreta-de-pelo-menos-32-caracteres"
 PORT=3000
 CORS_ORIGIN="https://seu-frontend.vercel.app"
