build(backend): restringe include/exclude no tsconfig para ignorar arquivos corrompidos

--- a/snack-lirio/backend/tsconfig.json
+++ b/snack-lirio/backend/tsconfig.json
@@ -7,5 +7,10 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./dist"
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": [
+    "src/import { Request, Response } from 'expre.ts",
+    "src/import { Request, Response, NextFunction.ts"
+  ]
 }
